welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: identifier expected but integer literal found.
  var p:Int =-1
              ^